Frankbelford/uatv1ba/force-app/main/default/objects/IP_Umbrellalist__c/IP_Umbrellalist__c.object-meta.xml
<CustomObject>
    <label>Umbrella list</label>
    <nameField>
        <label>Umbrella Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Umbrella list</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>