Frankbelford/uatv1ba/force-app/main/default/objects/IP_Umbrellalist__c/fields/IP_AddressLine3__c.field-meta.xml
<CustomField>
    <fullName>IP_AddressLine3__c</fullName>
    <label>Address Line 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>