Frankbelford/uatv1ba/force-app/main/default/objects/IP_Umbrellalist__c/fields/IP_BankAccountName__c.field-meta.xml
<CustomField>
    <fullName>IP_BankAccountName__c</fullName>
    <label>Bank Account Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>