Frankbelford/uatv1ba/force-app/main/default/objects/IP_Umbrellalist__c/fields/IP_BankAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>IP_BankAccountNumber__c</fullName>
    <label>Bank Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>