Frankbelford/uatv1ba/force-app/main/default/objects/IP_Umbrellalist__c/fields/IP_BankSortCode__c.field-meta.xml
<CustomField>
    <fullName>IP_BankSortCode__c</fullName>
    <label>Bank Sort Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>