Frankbelford/uatv1ba/force-app/main/default/objects/IP_Umbrellalist__c/fields/IP_BuildingSocietyNo__c.field-meta.xml
<CustomField>
    <fullName>IP_BuildingSocietyNo__c</fullName>
    <label>Building Society No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>