Frankbelford/uatv1ba/force-app/main/default/objects/IP_Umbrellalist__c/fields/IP_CompanyRegNo__c.field-meta.xml
<CustomField>
    <fullName>IP_CompanyRegNo__c</fullName>
    <label>Company Registration No</label>
    <length>16</length>
    <type>Text</type>
</CustomField>