Frankbelford/uatv1ba/force-app/main/default/objects/IP_Umbrellalist__c/fields/IP_OkToSupply__c.field-meta.xml
<CustomField>
    <fullName>IP_OkToSupply__c</fullName>
    <label>Ok to Supply</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>