Frankbelford/uatv1ba/force-app/main/default/objects/IP_Umbrellalist__c/fields/IP_PaymentType__c.field-meta.xml
<CustomField>
    <fullName>IP_PaymentType__c</fullName>
    <label>Payment Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>