Frankbelford/uatv1ba/force-app/main/default/objects/IP_Umbrellalist__c/fields/IP_SupplierReference__c.field-meta.xml
<CustomField>
    <fullName>IP_SupplierReference__c</fullName>
    <label>Supplier Reference</label>
    <length>10</length>
    <type>Text</type>
</CustomField>