Frankbelford/uatv1ba/force-app/main/default/objects/IP_Umbrellalist__c/fields/IP_VATRegistered__c.field-meta.xml
<CustomField>
    <fullName>IP_VATRegistered__c</fullName>
    <label>VAT Registered</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>