Frankbelford/uatv1ba/force-app/main/default/objects/IP_Umbrellalist__c/fields/VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Number__c</fullName>
    <label>VAT Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>