Frankbelford/uatv1ba/force-app/main/default/objects/IP_Umbrellalist__c/validationRules/Vat_Number_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Vat_Number_Format</fullName>
    <active>true</active>
    <errorConditionFormula>IP_VATRegistered__c = 1 &amp;&amp; ( VAT_Number__c = &apos;&apos; || NOT(REGEX(VAT_Number__c , &quot;[0-9]{9}&quot;)))</errorConditionFormula>
    <errorMessage>Vat number is required and should be 9 numeric</errorMessage>
</ValidationRule>