Frankbelford/uatv1ba/force-app/main/default/objects/IP_Umbrellalist__c/validationRules/VAT_registered_if_VAT_number_entered.validationRule-meta.xml
<ValidationRule>
    <fullName>VAT_registered_if_VAT_number_entered</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK( VAT_Number__c )) &amp;&amp;  IP_VATRegistered__c = 0</errorConditionFormula>
    <errorMessage>VAT Registered cannot be null if VAT number is entered</errorMessage>
</ValidationRule>