Frankbelford/uatv1ba/force-app/main/default/objects/IP_Umbrellalist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IP_SupplierReference__c</columns>
    <columns>IP_OkToSupply__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>IP_AddressLine1__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>